--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: Build and push soundboard
+name: Build and push yagpdb
 
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch: 
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: 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
+        password: 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
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -31,8 +31,9 @@ jobs:
         push: true
         file: ./yagpdb_docker/Dockerfile
         tags: |
-          ghcr.io/adamef93/yagpdb:latest
-          ghcr.io/adamef93/yagpdb:${{ github.sha }}
+          ghcr.io/adamef93/soundboard:latest
+          ghcr.io/adamef93/soundboard:${{ github.sha }}
 
     - name: Log out of GitHub Container Registry
       run: docker logout ghcr.io
+file: ./yagpdb_docker/Dockerfile
